# VCRasterizer

./: .gitignore  CMakeLists.txt  README.md  build-macos.sh  build.bat  clean.bat  install-deps-macos.sh  install-deps.bat  quick-fix-macos.sh
include/: DataTypes.h  DatatTypes.h  FPSCounter.h  MultiThreadedSIMDRasterizer.h  OptimizedMultiThreadedSIMDRasterizer.h  Renderer.h  SIMDUtils.h  SoftwareRasterizer.h
src/: MultiThreadedSIMDRasterizer.cpp  OptimizedMultiThreadedSIMDRasterizer.cpp  main.cpp
